# iboardbot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json
boards/: main.yaml
docs/: Adding-SystemD-Service.md  Flash-Arduino.md  Setup-Docker.md  Setup-Manual.md
firmware/iBoardBot_114_M0/: Servos.ino  WifiESP.ino
firmware/iBoardBot_114_M0_Rework/: iBoardBot_114_M0_Rework.ino
firmware/original_iBoardBot_114_M0/: Configuration.h  Servos.ino  Steppers.ino  WifiESP.ino  original_iBoardBot_114_M0.ino
iboardbot-app/: README.md  index.html  package-lock.json  package.json
iboardbot-app/src/: App.jsx  config.ts  index.css
iboardbot-app/src/hocks/: useName.js
src/: board.rs  config.rs  main.rs  protocol.rs  sessions.rs
src/api/: action.rs  docs.rs  mod.rs  response.rs  temp.rs
src/api/controllers/: mod.rs
src/api/controllers/boards/: list.rs  mod.rs
src/api/controllers/boards/jobs/: add.rs  current.rs  list.rs
src/api/services/boards/: entities.rs  mod.rs
src/utils/: coords.rs  mod.rs  qtree.rs  software_board.rs  svg.rs  text.rs
src/utils/text/: font_loader.rs  mod.rs  renderer.rs
temp-conversions/: 1ed1487f-f08a-47de-afee-4a940e9dd36f.gcode  3dc6b419-1de7-4236-b3d7-7ceee6e5654d.gcode  570fca2f-ba3b-4f2d-89af-132bfb6bc3dc.gcode  84895002-01ff-42d9-8e9a-ecef1a4c6cff.gcode  863c0e9f-fe38-4ad7-ada7-0d8b4f98b71f.gcode
