[package]
name = "iboardbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.13.4", features = ["axum", "scalar"] }
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros", "ws", "json", "multipart"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-server = "0.6.0"
bevy_math = "0.13.2"
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json", "rustls-tls"] }
schemars = { version = "0.8.16", features = ["uuid1", "uuid", "chrono"] }
serde = { version = "1.0.198", features = ["derive", "rc"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v7", "v4"] }
